templates/page.html: add missing space
Previously there was no space between the title and the closed
indicator.

--- a/templates/page.html
+++ b/templates/page.html
@@ -190,7 +190,7 @@
           ("{{ pr_title }}")
           {%- else -%}
           {%- endmatch -%}
-          {% if closed -%}
+          {% if closed %}
           (closed)
           {%- endif -%}
         </li>
