--- a/templates/page.html
+++ b/templates/page.html
@@ -18,6 +18,7 @@
     {% endmatch %}
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
       :root {
